package com.ugcs.ucs.proto.mapping;

import com.ugcs.ucs.proto.MessagesProto;
import com.ugcs.ucs.proto.MessagesProto.AcquireLockRequest;
import com.ugcs.ucs.proto.MessagesProto.AcquireLockResponse;
import com.ugcs.ucs.proto.MessagesProto.ActivateLicenseRequest;
import com.ugcs.ucs.proto.MessagesProto.ActivateLicenseResponse;
import com.ugcs.ucs.proto.MessagesProto.AuthorizeHciRequest;
import com.ugcs.ucs.proto.MessagesProto.AuthorizeHciResponse;
import com.ugcs.ucs.proto.MessagesProto.CalculateSplineRequest;
import com.ugcs.ucs.proto.MessagesProto.CalculateSplineResponse;
import com.ugcs.ucs.proto.MessagesProto.CancelOperationRequest;
import com.ugcs.ucs.proto.MessagesProto.CancelOperationResponse;
import com.ugcs.ucs.proto.MessagesProto.ChangeRouteVehicleProfileRequest;
import com.ugcs.ucs.proto.MessagesProto.ChangeRouteVehicleProfileResponse;
import com.ugcs.ucs.proto.MessagesProto.CheckForUpdatesRequest;
import com.ugcs.ucs.proto.MessagesProto.CheckForUpdatesResponse;
import com.ugcs.ucs.proto.MessagesProto.CheckLockRequest;
import com.ugcs.ucs.proto.MessagesProto.CheckLockResponse;
import com.ugcs.ucs.proto.MessagesProto.CheckMultipleLocksRequest;
import com.ugcs.ucs.proto.MessagesProto.CheckMultipleLocksResponse;
import com.ugcs.ucs.proto.MessagesProto.ConvertRouteAltitudesRequest;
import com.ugcs.ucs.proto.MessagesProto.ConvertRouteAltitudesResponse;
import com.ugcs.ucs.proto.MessagesProto.CountTelemetryRequest;
import com.ugcs.ucs.proto.MessagesProto.CountTelemetryResponse;
import com.ugcs.ucs.proto.MessagesProto.CreateOrUpdateObjectRequest;
import com.ugcs.ucs.proto.MessagesProto.CreateOrUpdateObjectResponse;
import com.ugcs.ucs.proto.MessagesProto.DeactivateLicenseRequest;
import com.ugcs.ucs.proto.MessagesProto.DeactivateLicenseResponse;
import com.ugcs.ucs.proto.MessagesProto.DeleteObjectRequest;
import com.ugcs.ucs.proto.MessagesProto.DeleteObjectResponse;
import com.ugcs.ucs.proto.MessagesProto.DeleteTelemetryRequest;
import com.ugcs.ucs.proto.MessagesProto.DeleteTelemetryResponse;
import com.ugcs.ucs.proto.MessagesProto.ExportMissionToXmlRequest;
import com.ugcs.ucs.proto.MessagesProto.ExportMissionToXmlResponse;
import com.ugcs.ucs.proto.MessagesProto.ExportRouteToXmlRequest;
import com.ugcs.ucs.proto.MessagesProto.ExportRouteToXmlResponse;
import com.ugcs.ucs.proto.MessagesProto.ExportTelemetryToXmlRequest;
import com.ugcs.ucs.proto.MessagesProto.ExportTelemetryToXmlResponse;
import com.ugcs.ucs.proto.MessagesProto.GetAdsbAircraftListRequest;
import com.ugcs.ucs.proto.MessagesProto.GetAdsbAircraftListResponse;
import com.ugcs.ucs.proto.MessagesProto.GetAdsbBulbStatusRequest;
import com.ugcs.ucs.proto.MessagesProto.GetAdsbBulbStatusResponse;
import com.ugcs.ucs.proto.MessagesProto.GetCapabilitiesRequest;
import com.ugcs.ucs.proto.MessagesProto.GetCapabilitiesResponse;
import com.ugcs.ucs.proto.MessagesProto.GetElevationProfileRequest;
import com.ugcs.ucs.proto.MessagesProto.GetElevationProfileResponse;
import com.ugcs.ucs.proto.MessagesProto.GetKmlRouteRepresentationRequest;
import com.ugcs.ucs.proto.MessagesProto.GetKmlRouteRepresentationResponse;
import com.ugcs.ucs.proto.MessagesProto.GetLicenseRequest;
import com.ugcs.ucs.proto.MessagesProto.GetLicenseResponse;
import com.ugcs.ucs.proto.MessagesProto.GetLineOfSightRequest;
import com.ugcs.ucs.proto.MessagesProto.GetLineOfSightResponse;
import com.ugcs.ucs.proto.MessagesProto.GetLocationPassingTimeRequest;
import com.ugcs.ucs.proto.MessagesProto.GetLocationPassingTimeResponse;
import com.ugcs.ucs.proto.MessagesProto.GetMappingRequest;
import com.ugcs.ucs.proto.MessagesProto.GetMappingResponse;
import com.ugcs.ucs.proto.MessagesProto.GetMissionPreferencesRequest;
import com.ugcs.ucs.proto.MessagesProto.GetMissionPreferencesResponse;
import com.ugcs.ucs.proto.MessagesProto.GetNativeRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.GetNativeRouteResponse;
import com.ugcs.ucs.proto.MessagesProto.GetNfzListRequest;
import com.ugcs.ucs.proto.MessagesProto.GetNfzListResponse;
import com.ugcs.ucs.proto.MessagesProto.GetObjectListRequest;
import com.ugcs.ucs.proto.MessagesProto.GetObjectListResponse;
import com.ugcs.ucs.proto.MessagesProto.GetObjectRequest;
import com.ugcs.ucs.proto.MessagesProto.GetObjectResponse;
import com.ugcs.ucs.proto.MessagesProto.GetParametersSelectionValuesRequest;
import com.ugcs.ucs.proto.MessagesProto.GetParametersSelectionValuesResponse;
import com.ugcs.ucs.proto.MessagesProto.GetPolygonAreaRequest;
import com.ugcs.ucs.proto.MessagesProto.GetPolygonAreaResponse;
import com.ugcs.ucs.proto.MessagesProto.GetRasterGridRequest;
import com.ugcs.ucs.proto.MessagesProto.GetRasterGridResponse;
import com.ugcs.ucs.proto.MessagesProto.GetRasterValuesRequest;
import com.ugcs.ucs.proto.MessagesProto.GetRasterValuesResponse;
import com.ugcs.ucs.proto.MessagesProto.GetTelemetryRequest;
import com.ugcs.ucs.proto.MessagesProto.GetTelemetryResponse;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleLogByTimeRangeRequest;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleLogByTimeRangeResponse;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleLogRequest;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleLogResponse;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleTracksRequest;
import com.ugcs.ucs.proto.MessagesProto.GetVehicleTracksResponse;
import com.ugcs.ucs.proto.MessagesProto.ImportMissionFromXmlRequest;
import com.ugcs.ucs.proto.MessagesProto.ImportMissionFromXmlResponse;
import com.ugcs.ucs.proto.MessagesProto.ImportRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.ImportRouteResponse;
import com.ugcs.ucs.proto.MessagesProto.ImportTelemetryFromXmlRequest;
import com.ugcs.ucs.proto.MessagesProto.ImportTelemetryFromXmlResponse;
import com.ugcs.ucs.proto.MessagesProto.JoinRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.JoinRouteResponse;
import com.ugcs.ucs.proto.MessagesProto.LoginRequest;
import com.ugcs.ucs.proto.MessagesProto.LoginResponse;
import com.ugcs.ucs.proto.MessagesProto.LogoutRequest;
import com.ugcs.ucs.proto.MessagesProto.LogoutResponse;
import com.ugcs.ucs.proto.MessagesProto.Notification;
import com.ugcs.ucs.proto.MessagesProto.OperationStatus;
import com.ugcs.ucs.proto.MessagesProto.OperationStream;
import com.ugcs.ucs.proto.MessagesProto.OperationStreamRequest;
import com.ugcs.ucs.proto.MessagesProto.ProcessRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.ProcessRouteResponse;
import com.ugcs.ucs.proto.MessagesProto.ProgressTestRequest;
import com.ugcs.ucs.proto.MessagesProto.ProgressTestResponse;
import com.ugcs.ucs.proto.MessagesProto.ReconstructRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.ReconstructRouteResponse;
import com.ugcs.ucs.proto.MessagesProto.ReleaseLockRequest;
import com.ugcs.ucs.proto.MessagesProto.ReleaseLockResponse;
import com.ugcs.ucs.proto.MessagesProto.SearchPlacesRequest;
import com.ugcs.ucs.proto.MessagesProto.SearchPlacesResponse;
import com.ugcs.ucs.proto.MessagesProto.SendCommandRequest;
import com.ugcs.ucs.proto.MessagesProto.SendCommandResponse;
import com.ugcs.ucs.proto.MessagesProto.SendStatisticsRequest;
import com.ugcs.ucs.proto.MessagesProto.SendStatisticsResponse;
import com.ugcs.ucs.proto.MessagesProto.SetHciLocaleRequest;
import com.ugcs.ucs.proto.MessagesProto.SetHciLocaleResponse;
import com.ugcs.ucs.proto.MessagesProto.SplitRouteByDistanceRequest;
import com.ugcs.ucs.proto.MessagesProto.SplitRouteByDistanceResponse;
import com.ugcs.ucs.proto.MessagesProto.SplitRouteBySegmentsRequest;
import com.ugcs.ucs.proto.MessagesProto.SplitRouteBySegmentsResponse;
import com.ugcs.ucs.proto.MessagesProto.StreamTestRequest;
import com.ugcs.ucs.proto.MessagesProto.StreamTestResponse;
import com.ugcs.ucs.proto.MessagesProto.SubmitUtmOperationRequest;
import com.ugcs.ucs.proto.MessagesProto.SubmitUtmOperationResponse;
import com.ugcs.ucs.proto.MessagesProto.SubscribeEventRequest;
import com.ugcs.ucs.proto.MessagesProto.SubscribeEventResponse;
import com.ugcs.ucs.proto.MessagesProto.TraceTelemetryFramesRequest;
import com.ugcs.ucs.proto.MessagesProto.TraceTelemetryFramesResponse;
import com.ugcs.ucs.proto.MessagesProto.UnsubscribeEventRequest;
import com.ugcs.ucs.proto.MessagesProto.UnsubscribeEventResponse;
import com.ugcs.ucs.proto.MessagesProto.UpdateMissionPreferencesRequest;
import com.ugcs.ucs.proto.MessagesProto.UpdateMissionPreferencesResponse;
import com.ugcs.ucs.proto.MessagesProto.UpdateObjectFieldsRequest;
import com.ugcs.ucs.proto.MessagesProto.UpdateObjectFieldsResponse;
import com.ugcs.ucs.proto.MessagesProto.UploadRouteRequest;
import com.ugcs.ucs.proto.MessagesProto.UploadRouteResponse;
import com.ugcs.ucs.proto.codec.ProtoMessageMapping;

public class HciMessageMapping extends ProtoMessageMapping {

	public HciMessageMapping() {
		putMapping(0, MessagesProto.Error.class);
		putMapping(1, Notification.class);
		putMapping(2, OperationStatus.class);
		putMapping(3, OperationStream.class);
		putMapping(4, OperationStreamRequest.class);
		putMapping(5, CancelOperationRequest.class);
		putMapping(6, CancelOperationResponse.class);

		putMapping(10, GetObjectListRequest.class);
		putMapping(11, GetObjectListResponse.class);
		putMapping(12, GetObjectRequest.class);
		putMapping(13, GetObjectResponse.class);
		putMapping(14, CreateOrUpdateObjectRequest.class);
		putMapping(15, CreateOrUpdateObjectResponse.class);
		putMapping(16, DeleteObjectRequest.class);
		putMapping(17, DeleteObjectResponse.class);
		putMapping(18, UpdateObjectFieldsRequest.class);
		putMapping(19, UpdateObjectFieldsResponse.class);
		putMapping(20, AuthorizeHciRequest.class);
		putMapping(21, AuthorizeHciResponse.class);
		putMapping(22, LoginRequest.class);
		putMapping(23, LoginResponse.class);
		putMapping(24, LogoutRequest.class);
		putMapping(25, LogoutResponse.class);
		putMapping(30, GetRasterGridRequest.class);
		putMapping(31, GetRasterGridResponse.class);
		putMapping(32, ProcessRouteRequest.class);
		putMapping(33, ProcessRouteResponse.class);
		putMapping(34, GetRasterValuesRequest.class);
		putMapping(35, GetRasterValuesResponse.class);
		putMapping(36, GetTelemetryRequest.class);
		putMapping(37, GetTelemetryResponse.class);
		putMapping(38, GetKmlRouteRepresentationRequest.class);
		putMapping(39, GetKmlRouteRepresentationResponse.class);
		putMapping(42, SetHciLocaleRequest.class);
		putMapping(43, SetHciLocaleResponse.class);
		putMapping(44, ConvertRouteAltitudesRequest.class);
		putMapping(45, ConvertRouteAltitudesResponse.class);
		putMapping(46, GetLineOfSightRequest.class);
		putMapping(47, GetLineOfSightResponse.class);
		putMapping(48, GetElevationProfileRequest.class);
		putMapping(49, GetElevationProfileResponse.class);
		putMapping(50, GetAdsbAircraftListRequest.class);
		putMapping(51, GetAdsbAircraftListResponse.class);
		putMapping(52, SearchPlacesRequest.class);
		putMapping(53, SearchPlacesResponse.class);
		putMapping(54, ExportRouteToXmlRequest.class);
		putMapping(55, ExportRouteToXmlResponse.class);
		putMapping(56, ImportRouteRequest.class);
		putMapping(57, ImportRouteResponse.class);
		putMapping(58, SubscribeEventRequest.class);
		putMapping(59, SubscribeEventResponse.class);
		putMapping(60, UnsubscribeEventRequest.class);
		putMapping(61, UnsubscribeEventResponse.class);
		putMapping(62, GetVehicleLogRequest.class);
		putMapping(63, GetVehicleLogResponse.class);
		putMapping(64, SendCommandRequest.class);
		putMapping(65, SendCommandResponse.class);
		putMapping(66, UploadRouteRequest.class);
		putMapping(67, UploadRouteResponse.class);
		putMapping(68, GetLicenseRequest.class);
		putMapping(69, GetLicenseResponse.class);
		putMapping(70, ActivateLicenseRequest.class);
		putMapping(71, ActivateLicenseResponse.class);
		putMapping(72, ExportMissionToXmlRequest.class);
		putMapping(73, ExportMissionToXmlResponse.class);
		putMapping(74, ImportMissionFromXmlRequest.class);
		putMapping(75, ImportMissionFromXmlResponse.class);
		putMapping(76, AcquireLockRequest.class);
		putMapping(77, AcquireLockResponse.class);
		putMapping(78, ReleaseLockRequest.class);
		putMapping(79, ReleaseLockResponse.class);
		putMapping(80, CheckLockRequest.class);
		putMapping(81, CheckLockResponse.class);
		putMapping(82, CheckMultipleLocksRequest.class);
		putMapping(83, CheckMultipleLocksResponse.class);
		putMapping(84, GetMissionPreferencesRequest.class);
		putMapping(85, GetMissionPreferencesResponse.class);
		putMapping(86, UpdateMissionPreferencesRequest.class);
		putMapping(87, UpdateMissionPreferencesResponse.class);
		putMapping(88, GetVehicleLogByTimeRangeRequest.class);
		putMapping(89, GetVehicleLogByTimeRangeResponse.class);
		putMapping(90, ExportTelemetryToXmlRequest.class);
		putMapping(91, ExportTelemetryToXmlResponse.class);
		putMapping(92, ImportTelemetryFromXmlRequest.class);
		putMapping(93, ImportTelemetryFromXmlResponse.class);
		putMapping(94, TraceTelemetryFramesRequest.class);
		putMapping(95, TraceTelemetryFramesResponse.class);
		putMapping(96, DeleteTelemetryRequest.class);
		putMapping(97, DeleteTelemetryResponse.class);
		putMapping(98, DeactivateLicenseRequest.class);
		putMapping(99, DeactivateLicenseResponse.class);
		putMapping(100, CheckForUpdatesRequest.class);
		putMapping(101, CheckForUpdatesResponse.class);
		putMapping(102, SendStatisticsRequest.class);
		putMapping(103, SendStatisticsResponse.class);
		putMapping(106, GetParametersSelectionValuesRequest.class);
		putMapping(107, GetParametersSelectionValuesResponse.class);
		putMapping(108, GetAdsbBulbStatusRequest.class);
		putMapping(109, GetAdsbBulbStatusResponse.class);
		putMapping(110, CountTelemetryRequest.class);
		putMapping(111, CountTelemetryResponse.class);
		putMapping(112, CalculateSplineRequest.class);
		putMapping(113, CalculateSplineResponse.class);
		putMapping(114, ChangeRouteVehicleProfileRequest.class);
		putMapping(115, ChangeRouteVehicleProfileResponse.class);
		putMapping(116, GetNfzListRequest.class);
		putMapping(117, GetNfzListResponse.class);
		putMapping(118, SubmitUtmOperationRequest.class);
		putMapping(119, SubmitUtmOperationResponse.class);
		putMapping(120, GetCapabilitiesRequest.class);
		putMapping(121, GetCapabilitiesResponse.class);
		putMapping(124, GetMappingRequest.class);
		putMapping(125, GetMappingResponse.class);
		putMapping(126, GetVehicleTracksRequest.class);
		putMapping(127, GetVehicleTracksResponse.class);
		putMapping(128, GetNativeRouteRequest.class);
		putMapping(129, GetNativeRouteResponse.class);
		putMapping(130, GetLocationPassingTimeRequest.class);
		putMapping(131, GetLocationPassingTimeResponse.class);
		putMapping(132, GetPolygonAreaRequest.class);
		putMapping(133, GetPolygonAreaResponse.class);
		putMapping(134, SplitRouteBySegmentsRequest.class);
		putMapping(135, SplitRouteBySegmentsResponse.class);
		putMapping(136, SplitRouteByDistanceRequest.class);
		putMapping(137, SplitRouteByDistanceResponse.class);
		putMapping(138, JoinRouteRequest.class);
		putMapping(139, JoinRouteResponse.class);
		putMapping(140, ReconstructRouteRequest.class);
		putMapping(141, ReconstructRouteResponse.class);

		putMapping(200, StreamTestRequest.class);
		putMapping(201, StreamTestResponse.class);
		putMapping(202, ProgressTestRequest.class);
		putMapping(203, ProgressTestResponse.class);
	}
}
